# Homework_11.5

./: CMakeLists.txt  Equilateral_Triangle.cpp  Equilateral_Triangle.h  Figure.cpp  Figure.h  FiguresClient.cpp  Isosceles_Triangle.cpp  Isosceles_Triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Right_Triangle.cpp  Right_Triangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
